@@ -5,8 +5,9 @@
 
 #include <vector>
 #include <string>
+#include "ace/Capabilities.h"
 
-class TestClient : public ACE_Task_Base
+class TestClient : public ACE_Task_Base, public ACE_Capabilities
 {
 public:
   TestClient(CORBA::ORB_ptr orb, int argc, char* argv[]);
@@ -22,7 +23,7 @@ private:
   virtual int svc();
 
   CORBA::ORB_var     orb_;
-  std::vector<std::string> iors_;
+  std::vector<ACE_TString> iors_;
 
   char               pauseType_;
   int                startupPause_;
