@@ -279,9 +279,8 @@ bool TestServer::verifyEnvironment() const
   string currentDir = getWorkingPath();
   if (expectedDir_.empty() == false && currentDir != expectedDir_)
   {
-    cout << "Error: directory paths ("
-      << currentDir << ", " << expectedDir_
-      << ") do not match." << endl;
+    ACE_DEBUG((LM_DEBUG, "Error: directory paths (%s,%s) do not match.\n",
+               currentDir.c_str(), expectedDir_.c_str()));
     err |= true;
   }
 
@@ -291,16 +290,14 @@ bool TestServer::verifyEnvironment() const
     const char* realValue = ACE_OS::getenv(expectedEnv_[i].first.c_str()) ;
     if (realValue == NULL)
     {
-      cout << "Error: env variable '"
-        << expectedEnv_[i].first
-        << "' not found." << endl;
+      ACE_DEBUG((LM_DEBUG, "Error, env variable '%s' not found\n",
+                 expectedEnv_[i].first.c_str()));
       err |= true;
     }
     else if (expectedEnv_[i].second != realValue)
     {
-      cout << "Error: env variable '" << expectedEnv_[i].first << "' values ("
-        << realValue << ", " << expectedEnv_[i].second
-        << ") do not match." << endl;
+      ACE_DEBUG((LM_DEBUG, "Error, env variable '%s' values (%s,%s) do not match.\n",
+                 expectedEnv_[i].first.c_str(), realValue, expectedEnv_[i].second.c_str()));
       err |= true;
     }
   }
@@ -343,7 +340,8 @@ void TestServer::run()
   if (registerWithManager() == false)
     return;
 
-  cout << "* Server (" << serverID_ << "." << serverInstanceID_ << ") started." << endl;
+  ACE_DEBUG((LM_DEBUG, "* Server (%d.%d) started.\n",
+             serverID_, serverInstanceID_));
 
   if (useIORTable_ == true)
   {
@@ -372,13 +370,13 @@ void TestServer::run()
 
   if (orb_->orb_core()->has_shutdown() != 0)
   {
-    cout << "* Server (" << serverID_ << "."
-      << serverInstanceID_ << ") ended." << endl;
+    ACE_DEBUG((LM_DEBUG, "* Server (%d.%d) ended.\n",
+               serverID_, serverInstanceID_));
   }
   else
   {
-    cout << "* Server (" << serverID_ << "."
-      << serverInstanceID_ << ") self terminated." << endl;
+    ACE_DEBUG((LM_DEBUG, "* Server (%d.%d) self terminated.\n",
+               serverID_, serverInstanceID_));
   }
 }
 
@@ -410,7 +408,7 @@ bool TestServer::registerWithManager()
       int diff = manager->endRetry();
       if (diff != 0)
       {
-        cout << "* Server Error: Not all retry attempts were made." << endl;
+        ACE_DEBUG((LM_DEBUG, "* Server Error: Not all retry attempts were made.\n"));
       }
       return false;
     }
@@ -419,8 +417,8 @@ bool TestServer::registerWithManager()
       serverInstanceID_  = manager->registerServer();
       if (serverInstanceID_ == -1)
       {
-        cout << "* Server (" << serverID_ << "."
-          << serverInstanceID_ << ") could not register." << endl;
+        ACE_DEBUG((LM_DEBUG, "* Server (%d,%d) could not register.\n",
+                   serverID_, serverInstanceID_));
         return false;
       }
     }
@@ -454,7 +452,7 @@ void TestServer::buildObjects()
       poaName = poaStream.str();
     }
 
-    cout << "* Creating POA:  " <<  poaName << endl;
+    ACE_DEBUG((LM_DEBUG, "* Creating POA: %s\n", poaName.c_str()));
 
     PortableServer::POA_var sub_poa = root_->create_POA(poaName.c_str(), mgr_.in(), policies);
 
@@ -469,7 +467,7 @@ void TestServer::buildObjects()
         objStream << "OBJ_" << serverID_ << "_" << (i + 1) << "_" << (j + 1);
         objName = objStream.str();
       }
-      cout << "* Activating Obj:  " << objName << endl;
+      ACE_DEBUG((LM_DEBUG, "* Activating Obj: %s\n", objName.c_str()));
 
       PortableServer::ObjectId_var oid = PortableServer::string_to_ObjectId(objName.c_str());
       sub_poa->activate_object_with_id(oid.in(), servant_.get());
